# human_body_segmentation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
configs/: train.yaml
scripts/: remove_extra_images_from_pascal.py
src/: config.py  constants.py  datamodule.py  dataset.py  export.py  lightning_module.py  logger.py  metrics.py  preprocessing.py  train.py  transform.py
src/callbacks/: debug.py  experiment_tracking.py
