[tool.poetry]
name = "human_body_segmentation"
version = "0.1.0"
description = ""
authors = ["Egor Osinkin <egor.os.ink@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
opencv-python-headless = "^4.7.0.72"
clearml = ">=1.10.4"
lightning = ">=2.0.6"
torch = ">=2.0.0,<2.0.1 || >2.0.1"  # Should exclude 2.0.1 due to the bug: https://stackoverflow.com/questions/76327419/valueerror-libcublas-so-0-9-not-found-in-the-system-path
omegaconf = ">=2.3.0"
pydantic = ">=2.1.1"
albumentations = ">=1.3.1"
torchvision = ">=0.15.0"
torchmetrics = ">=1.1.1"
tensorboard = ">=2.14.0"
segmentation-models-pytorch = ">=0.3.3"
jpeg4py = "0.1.4"
imageio = "2.34.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.2.1"
wemake-python-styleguide = ">=0.17.0"
pytest = ">=7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
